subscriptions loading on sub/faves page

--- a/assets/partials/favorites.html
+++ b/assets/partials/favorites.html
@@ -1,3 +1,8 @@
 <div class="row container">
-    <div id="profile-links" ng-include="'assets/partials/linkCard.html'"></div>
+    <h3>Media</h3>
+    <div id="media">
+        <div class="sub" ng-repeat="sub in subs">
+            {{sub}}
+        </div>
+    </div>
 </div>
