--- a/assets/partials/favorites.html
+++ b/assets/partials/favorites.html
@@ -9,7 +9,7 @@
     <h3>Music</h3>
     <div class="faves" id="music">
         <div class="sub" ng-repeat="sub in music">
-            <a ng-href="#!/{{sub.music.type}}/{{sub.music.id}}" style="background-image: url({{sub.music.image}});">
+            <a ng-href="#!/{{sub.music.prefix}}{{sub.music.type}}/{{sub.music.id}}" style="background-image: url({{sub.music.image}});">
             </a>
         </div>
     </div>
