--- a/assets/partials/track.html
+++ b/assets/partials/track.html
@@ -1,7 +1,8 @@
 <div class="row container">
     <div class="col s12 m4 l5" id="sidebar">
+        <img class="ldg" src="assets/img/ldg.svg" ng-show="!music">
         <img ng-src="{{music.image}}">
-        <h1>
+        <h1 ng-show="music">
             <i ng-click="subscribe()" ng-show="!subscription" class="sub material-icons">star_border</i>
             <i ng-click="unsubscribe(subscription.key)" ng-show="subscription" class="sub material-icons">star</i>
             <a ng-click="playTrack(music.id)" class="btn-floating btn waves-effect waves-light play"><i class="material-icons">play_arrow</i></a>
