added summary to media pages

--- a/assets/partials/media.html
+++ b/assets/partials/media.html
@@ -8,6 +8,7 @@
             <i ng-click="unsubscribe(subscription.key)" ng-show="subscription" class="sub material-icons">star</i>
         </h1>
         <h2>{{media.subtitle}}</h2>
+        <p>{{media.summary}}</p>
     </div>
     <div class="col s12 m8 l6 offset-l1">
         <div id="profile-links" ng-include="'assets/partials/linkCard.html'"></div>
